--- a/src/components/braggers/braggers.css
+++ b/src/components/braggers/braggers.css
@@ -59,7 +59,7 @@ title {
     font-size: 20px;
     font-weight: 200;
     padding: 5px;
-    max-width: 210px;
+    width: 185px;
  }
 
  .bragger-name {
