Responsive styling to braggers page

--- a/src/components/braggers/braggers.css
+++ b/src/components/braggers/braggers.css
@@ -6,7 +6,7 @@
 }
 
 menu {
-    width: 100%;
+    margin-bottom: 0;
     padding: 0;
 }
 
@@ -67,6 +67,21 @@ title {
  }
 
  /* responsive design */
+
+ /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+ /* Portrait and Landscape */
+ @media only screen 
+ and (min-device-width: 320px) 
+ and (max-device-width: 568px)
+ and (-webkit-min-device-pixel-ratio: 2) {
+    .bragger-div {
+        width: 100%;
+    }
+    .mdc-button--raised {
+        width: 100%;
+    }
+ }
 
  @media (min-width: 944px) {
     .bragger-div {
