--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -4,6 +4,7 @@ h1 {
     letter-spacing: 3px;
     font-size: 52px;
     margin-bottom: 0;
+    margin-top: 10px;
     color: var(--primary-blue);
 }
 
