--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,28 @@ body {
     --primary-grey: #63666A;
     --secondary-grey: #B1B3B3;
 }
+
+/* responsive design */
+
+ /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+ /* Portrait and Landscape */
+ @media only screen 
+ and (max-device-width: 320px) 
+ and (-webkit-min-device-pixel-ratio: 2) {
+    body {
+        width: 304px;
+    }
+ }
+
+ /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+and (min-device-width: 375px)
+and (max-device-width: 400px)
+and (-webkit-min-device-pixel-ratio: 2) { 
+    body {
+        width: 359px;
+    }
+}
