--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -13,5 +13,50 @@ h3 {
     font-size: 20px;
     padding-right: 10px;
     text-align: right;
+    margin-top: 10px;
     color: var(--secondary-blue);
 }
+
+/* responsive design */
+
+ /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+ @media only screen 
+ and (min-device-width: 320px)
+ and (-webkit-min-device-pixel-ratio: 2) {
+    h1 {
+        font-size: 34px;
+    }
+    h3 {
+        margin-top: 5px;
+    }
+ }
+
+ /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
+
+ @media only screen 
+ and (min-device-width: 375px)
+ and (-webkit-min-device-pixel-ratio: 2) { 
+    h1 {
+        font-size: 34px;
+    }
+    h3 {
+        font-size: 16px;
+        margin-top: 5px;
+    }
+ }
+
+/* ----------- iPhone 6 Plus ----------- */
+
+ /* Portrait and Landscape */
+ @media only screen 
+ and (min-device-width: 414px) 
+ and (-webkit-min-device-pixel-ratio: 2) {
+    h1 {
+        font-size: 38px;
+    }
+    h3 {
+        font-size: 18px;
+        margin-top: 5px;
+    }
+ }
