--- a/src/styles.css
+++ b/src/styles.css
@@ -16,9 +16,8 @@ body {
 
  /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
 
- /* Portrait and Landscape */
  @media only screen 
- and (max-device-width: 320px) 
+ and (min-device-width: 320px)
  and (-webkit-min-device-pixel-ratio: 2) {
     body {
         width: 304px;
@@ -27,12 +26,21 @@ body {
 
  /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
 
-/* Portrait and Landscape */
-@media only screen 
-and (min-device-width: 375px)
-and (max-device-width: 400px)
-and (-webkit-min-device-pixel-ratio: 2) { 
+ @media only screen 
+ and (min-device-width: 375px)
+ and (-webkit-min-device-pixel-ratio: 2) { 
     body {
-        width: 359px;
+        width: 303px;
     }
-}
+ }
+
+/* ----------- iPhone 6 Plus ----------- */
+
+ /* Portrait and Landscape */
+ @media only screen 
+ and (min-device-width: 414px) 
+ and (-webkit-min-device-pixel-ratio: 2) {
+    body {
+        width: 335px;
+    }
+ }
