--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -23,6 +23,8 @@ h3 {
 
  @media only screen 
  and (min-device-width: 320px)
+ and (max-device-width: 568px)
+ and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2) {
     h1 {
         font-size: 34px;
@@ -30,6 +32,7 @@ h3 {
     }
     h3 {
         margin-top: 5px;
+        margin-bottom: 0;
     }
  }
 
@@ -37,6 +40,8 @@ h3 {
 
  @media only screen 
  and (min-device-width: 375px)
+ and (max-device-width: 667px)
+ and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2) { 
     h1 {
         font-size: 34px;
@@ -47,11 +52,13 @@ h3 {
     }
  }
 
-/* ----------- iPhone 6 Plus ----------- */
+ /* ----------- iPhone 6+, 7+ and 8+ ----------- */
 
  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 414px) 
+ and (max-device-width: 736px) 
+ and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2) {
     h1 {
         font-size: 38px;
