--- a/src/components/braggers/braggers.css
+++ b/src/components/braggers/braggers.css
@@ -74,10 +74,10 @@ title {
 
  /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
 
- /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
+ and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2) {
     .bragger-div {
         width: 100%;
