--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -36,6 +36,22 @@ h3 {
     }
  }
 
+ @media only screen 
+ and (min-device-width: 320px)
+ and (max-device-width: 568px)
+ and (orientation: landscape)
+ and (-webkit-min-device-pixel-ratio: 2) {
+    h1 {
+        font-size: 42px;
+        margin-top: 0;
+    }
+    h3 {
+        margin-top: 5px;
+        margin-bottom: 0;
+    }
+ }
+
+
  /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
 
  @media only screen 
@@ -54,7 +70,6 @@ h3 {
 
  /* ----------- iPhone 6+, 7+ and 8+ ----------- */
 
- /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
