--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -35,6 +35,21 @@ h3 {
     }
  }
 
+ @media only screen 
+ and (min-device-width: 568px)
+ and (orientation: landscape)
+ and (-webkit-min-device-pixel-ratio: 2) {
+    h1 {
+        font-size: 34px;
+        margin-top: 0;
+    }
+    h3 {
+        font-size: 18px;
+        margin-top: 2px;
+        margin-bottom: 0;
+    }
+ }
+
  /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
 
  @media only screen 
@@ -49,6 +64,20 @@ h3 {
     }
  }
 
+ @media only screen 
+ and (min-device-width: 667px)
+ and (orientation: landscape)
+ and (-webkit-min-device-pixel-ratio: 2) {
+    h1 {
+        font-size: 40px;
+        margin-top: 0;
+    }
+    h3 {
+        font-size: 20px;
+        margin-top: 2px;
+    }
+ }
+
  /* ----------- iPhone 6+, 7+ and 8+ ----------- */
 
  @media only screen 
@@ -57,6 +86,18 @@ h3 {
  and (-webkit-min-device-pixel-ratio: 2) {
     h1 {
         font-size: 40px;
+    }
+    h3 {
+        margin-top: 5px;
+    }
+ }
+
+ @media only screen 
+ and (min-device-width: 736px)
+ and (orientation: landscape)
+ and (-webkit-min-device-pixel-ratio: 2) {
+    h1 {
+        font-size: 46px;
     }
     h3 {
         margin-top: 5px;
