--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -19,3 +19,17 @@
 .disabled {
     color:  var(--secondary-grey);
 }
+
+/* responsive design */
+
+ /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+ @media only screen 
+ and (min-device-width: 320px) 
+ and (max-device-width: 568px)
+ and (orientation: portrait)
+ and (-webkit-min-device-pixel-ratio: 2) {
+     .mdc-button {
+         font-size: 14px;
+     }
+ }
