--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ body {
 
  /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
 
- @media only screen 
+ /* @media only screen 
  and (min-device-width: 320px)
  and (max-device-width: 568px)
  and (orientation: portrait)
@@ -24,11 +24,11 @@ body {
     body {
         width: 304px;
     }
- }
+ } */
 
  /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
 
- @media only screen 
+ /* @media only screen 
  and (min-device-width: 375px)
  and (max-device-width: 667px)
  and (orientation: portrait) 
@@ -36,11 +36,11 @@ body {
     body {
         width: 359px;
     }
- }
+ } */
 
  /* ----------- iPhone 6+, 7+ and 8+ ----------- */
 
- @media only screen 
+ /* @media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (orientation: portrait)
@@ -48,4 +48,4 @@ body {
     body {
         width: 397px;
     }
-}
+} */
