--- a/src/components/join-the-brag/join-the-brag.css
+++ b/src/components/join-the-brag/join-the-brag.css
@@ -148,6 +148,21 @@ h3 {
     }
  }
 
+ /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
+
+ @media only screen 
+ and (min-device-width: 375px)
+ and (max-device-width: 667px)
+ and (orientation: portrait)
+ and (-webkit-min-device-pixel-ratio: 2) { 
+    .mdc-button {
+        font-size: 16px;
+    }
+    form {
+        font-size: 15px;
+    }
+ }
+
  /* ----------- iPhone 6+, 7+ and 8+ ----------- */
 
  @media only screen 
