--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -23,6 +23,7 @@ h3 {
 
  @media only screen 
  and (min-device-width: 320px)
+ and (max-device-width: 568px)
  and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2) {
     h1 {
@@ -37,7 +38,8 @@ h3 {
  }
 
  @media only screen 
- and (min-device-width: 568px)
+ and (min-device-width: 320px)
+ and (max-device-width: 568px)
  and (orientation: landscape)
  and (-webkit-min-device-pixel-ratio: 2) {
     h1 {
