--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -33,3 +33,15 @@
          font-size: 14px;
      }
  }
+
+ /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
+
+ @media only screen 
+ and (min-device-width: 375px)
+ and (max-device-width: 667px)
+ and (orientation: portrait)
+ and (-webkit-min-device-pixel-ratio: 2) { 
+    .mdc-button {
+        font-size: 16px;
+    }
+ }
