--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,4 +1,4 @@
 <div class="menu-div">
     <button id="braggers" class="mdc-button" (click)="goToBraggers()">Braggers</button>
-    <button id="join" class="mdc-button" (click)="goToJoin()">Join the Brag</button>
+    <button id="join" class="mdc-button disabled" (click)="goToJoin()" disabled>Join the Brag</button>
 </div>
