--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,4 +1,5 @@
 <div class="menu-div">
     <button id="braggers" class="mdc-button" (click)="goToBraggers()">Braggers</button>
     <button id="join" class="mdc-button" (click)="goToJoin()">Join the Brag</button>
+    <button id="about" class="mdc-button" (click)="goToAbout()">About</button>
 </div>
