--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: var(--primary-grey);
 }
 
 menu {
@@ -12,4 +13,44 @@ menu {
 
 title {
     display: block;
+}
+
+#tagline {
+    font-weight: lighter;
+}
+
+.mdc-button--raised {
+    display: flex;
+    flex-direction: column;
+    border-width: 0;
+    margin: 10px;
+    background-color: white;
+    color: var(--primary-grey);
+    font-size: 1.25em;
+    width: 70%;
+}
+
+.mdc-button--raised:focus {
+    outline: none;
+    border: 0;
+}
+
+h3 {
+    font-weight: 500;
+}
+
+.about-header {
+    width: 100%;
+}
+
+.about-content-div {
+    width: 100%;
+}
+
+.content {
+    text-align: justify;
+    padding: 0 50px;
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 35px;
 }
