--- a/src/components/about/about.html
+++ b/src/components/about/about.html
@@ -2,31 +2,61 @@
     <menu></menu>
     <title></title>
     <h2 id="tagline">Everyone has a story.</h2>
-    
-    
-    Bragging Rights was conceptualized by Amy Dalton (UX Designer)
-    as a way to empower women to speak up about their achievements
-    and the obstacles they faced in pursuit of their goals. 
-    She approached Allyson Mackay (Product Manager) with the idea. Allyson
-    incorporated agile timelines to represent the history of the Braggers.
-    Amy then approached AmbyrShae Jarrell (Software Engineer) to be one
-    of the first Braggers. Once Amy explained the idea, AmbyrShae decided
-    to build a web app that could be reused for other Braggers. Thus,
-    the three women worked together to make the first Bragging Session a 
-    success.
-
-    Bragging Rights is an opportunity to learn more about your coworkers as 
-    they share the highs and lows of their social/professional journey lines. 
-
-    Monthly Bragging Rights sessions are currently held by the Women's Network 
-    at GE Digital in New Orleans. Thier first session was held in December 2017
-    and continues to grow. Thus, AmbyrShae continues to add new features in her
-    spare time. If you would like to contribute to the web app, please submit 
-    a pull request at https://github.com/AmbyrShae/bragging-rights.
-
-    Amy, Allyson and AmbyrShae submitted a proposal to the Grace Hopper Conference
-    to showcase Bragging Rights at their 2018 conference. Their hope is that
-    by exposing Bragging Rights, it can be incorporated in many environments 
-    to empower women to speak up about their accomplishments.
-    
+    <button class="mdc-button--raised">
+        <div class="about-content-div">
+            <p id="primary-info" class="content">
+                Bragging Rights is an opportunity to learn more about 
+                your coworkers as they share the highs and lows of their 
+                social/professional journey lines.
+            </p>
+        </div>
+    </button>
+    <button class="mdc-button--raised">
+        <div class="about-header">
+            <h3>Our Story</h3>
+        </div>  
+        <div class="about-content-div">
+            <p class="content">
+                Bragging Rights was conceptualized by Amy Dalton (UX Designer)
+                as a way to empower women to speak up about their achievements
+                and the obstacles they faced in pursuit of their goals. 
+                She approached Allyson Mackay (Product Manager) with the idea. 
+                Allyson incorporated agile timelines to represent the history of 
+                the Braggers. Amy then approached AmbyrShae Jarrell 
+                (Software Engineer) to be one of the first Braggers. Once Amy 
+                explained the idea, AmbyrShae decided to build a web app that 
+                could be reused for other Braggers. Thus, the three women worked 
+                together to make the first Bragging Session a success.
+            </p>
+        </div>
+    </button>
+    <button class="mdc-button--raised">
+        <div class="about-header">
+            <h3>Grace Hopper Conference</h3>
+        </div>  
+        <div class="about-content-div">
+            <p class="content">
+                Amy, Allyson and AmbyrShae submitted a proposal to the Grace 
+                Hopper Conference to showcase Bragging Rights at their 2018 
+                conference. Their hope is that by exposing Bragging Rights, it can be 
+                incorporated in many environments to empower women to speak up 
+                about their accomplishments.
+            </p>
+        </div>
+    </button>
+    <button class="mdc-button--raised">
+        <div class="about-header">
+            <h3>GitHub</h3>
+        </div>  
+        <div class="about-content-div">
+            <p class="content">
+                Monthly Bragging Rights sessions are currently held by the 
+                Women's Network at GE Digital in New Orleans. Thier first 
+                session was held in December 2017 and continues to grow. 
+                Thus, AmbyrShae continues to add new features in her spare 
+                time. If you would like to contribute to the web app, please submit 
+                a pull request at https://github.com/AmbyrShae/bragging-rights.
+            </p>
+        </div>
+    </button>
 </div>
