--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/@material/button/dist/mdc.button.css";
-@import "../node_modules/@material/form-field/dist/mdc.form-field.css";
-@import "../node_modules/@material/textfield/dist/mdc.textfield.css";
-@import "../node_modules/@material/dialog/dist/mdc.dialog.css";
-@import "../node_modules/@material/linear-progress/dist/mdc.linear-progress.css";
-@import "../node_modules/@material/ripple/dist/mdc.ripple.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "../node_modules/font-awesome/css/font-awesome.css";
 
 body {
