--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,5 +1,4 @@
 <div class="menu-div">
-    <button id="braggers" class="mdc-button" (click)="goToBraggers()">Braggers</button>
-    <button id="join" class="mdc-button" (click)="goToJoin()">Join the Brag</button>
-    <button id="about" class="mdc-button" (click)="goToAbout()">About</button>
+    <button mat-button id="braggers" class="menu-btn" (click)="goToBraggers()">BRAGGERS</button>
+    <button mat-button id="about" class="menu-btn" (click)="goToAbout()">ABOUT</button>
 </div>
