--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -4,11 +4,13 @@
     font-size: 100%;
     flex-wrap: wrap;
 }
-.mdc-button {
+
+.menu-btn {
     color: var(--secondary-blue);
     font-size: 1.125em;
-    font-weight: lighter;
+    font-weight: 200;
     margin-bottom: 10px;
+    letter-spacing: 0.06em;
 }
 
 .active {
@@ -29,7 +31,7 @@
  and (max-device-width: 568px)
  and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2) {
-     .mdc-button {
+     .menu-btn {
          font-size: 14px;
      }
  }
@@ -41,7 +43,7 @@
  and (max-device-width: 667px)
  and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2) { 
-    .mdc-button {
+    .menu-btn {
         font-size: 16px;
     }
  }
