Styled about page

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -35,6 +35,9 @@ title {
     width: 70%;
     white-space: normal;
 }
+.content-btn:hover {
+    color: var(--primary-blue);
+}
 
 h3 {
     font-weight: 500;
@@ -54,4 +57,12 @@ h3 {
     font-size: 20px;
     font-weight: 200;
     line-height: 35px;
+}
+
+strong {
+    font-weight: 400;
+}
+
+a {
+    color: var(--secondary-blue);
 }
