--- a/src/components/about/about.html
+++ b/src/components/about/about.html
@@ -15,12 +15,12 @@
         </div>  
         <div id="story" class="about-content-div" hidden=true>
             <p class="content">
-                Bragging Rights was conceptualized by Amy Dalton (UX Designer)
+                Bragging Rights was conceptualized by <strong>Amy Dalton</strong> (UX Designer)
                 as a way to empower women to speak up about their achievements
                 and the obstacles they faced in pursuit of their goals. 
-                She approached Allyson Mackay (Product Manager) with the idea. 
+                She approached <strong>Allyson Mackay</strong>  (Product Manager) with the idea. 
                 Allyson incorporated agile timelines to represent the history of 
-                the Braggers. Amy then approached AmbyrShae Jarrell 
+                the Braggers. Amy then approached <strong>AmbyrShae Jarrell</strong> 
                 (Software Engineer) to be one of the first Braggers. Once Amy 
                 explained the idea, AmbyrShae decided to build a web app that 
                 could be reused for other Braggers. Thus, the three women worked 
@@ -35,8 +35,8 @@
         <div id="join" class="about-content-div" hidden=true>
             <p class="content">
                 If you'd like to speak at one of the monthly sessions, nominate someone
-                to speak or bring Bragging Rights to your site, please contact Amy Dalton
-                at amy.dalton@ge.com.
+                to speak or host your own Bragging Rights sessions,<strong> please contact
+                Amy Dalton at amy.dalton@ge.com</strong>.
             </p>
         </div>
     </button>
@@ -47,13 +47,12 @@
         <div id="contribute" class="about-content-div" hidden=true>
             <p class="content">
                 Monthly Bragging Rights sessions are currently held by the 
-                Women's Network at GE Digital in New Orleans. Thier first 
+                Women's Network at GE Digital in New Orleans. Their first 
                 session was held in December 2017 and continues to grow. 
                 Thus, AmbyrShae adds new features in her spare 
-                time. If you would like to contribute to the web app, please submit 
-                a pull request at 
-                <a href="https://github.com/AmbyrShae/bragging-rights">github.com/AmbyrShae/bragging-rights</a>. 
-                To learn more about AmbyrShae, please visit <a href="https://ambyrshae.com">ambyrshae.com</a>.
+                time. <strong>If you would like to contribute to the web app, please submit a pull request at 
+                <a href="https://github.com/AmbyrShae/bragging-rights" target="_blank">github.com/AmbyrShae/bragging-rights</a></strong>. 
+                To learn more about AmbyrShae, please visit <a href="https://ambyrshae.com" target="_blank">ambyrshae.com</a>.
             </p>
         </div>
     </button>
